templates: added devices templates controller
